--- a/Mission.WebUI/Views/Event/Index.cshtml
+++ b/Mission.WebUI/Views/Event/Index.cshtml
@@ -20,7 +20,7 @@
 					<div class="comments"><a href="#">@Html.ActionLink("Ändra", "Edit", "Event", new { id = events.ID }, null)</a></div>
 					<div class="user"><a href="#">@Html.ActionLink("Ta bort", "Delete", "Event", new { id = events.ID }, null)</a></div>
                     <div class=""><a>@Html.ActionLink("Skapa eventfråga", "CreateEventQuestion", "Event", new { id = events.ID}, null)</a></div>
-                    <div class=""><a>@Html.ActionLink("CreateAnswere", "CreateAnswere", "Event", new { id = events.ID }, null)</a></div>
+                    <div class=""><a>@Html.ActionLink("CreateAnswer", "CreateAnswer", "Event", new { id = events.ID }, null)</a></div>
                 }
             </div>
 		</article>
