--- a/Mission.WebUI/Views/Post/Blog.cshtml
+++ b/Mission.WebUI/Views/Post/Blog.cshtml
@@ -1,28 +1,16 @@
-﻿
-﻿@using Mission.Domain.Entities
-
+﻿﻿@using Mission.Domain.Entities
 @using Mission.WebUI.ViewModels
 @model BlogComments
 @{
     ViewBag.Title = "Blog";
 }
-
-
-
-
 <div id="posts-list">
-	        	
-
-    <h2 class="page-heading"><span>BLOGG</span></h2>	
+    <h2 class="page-heading">
+        <span>BLOGG</span></h2>
     @Html.DisplayFor(p => p.Posts)
 </div>
-
-
-
-
-
-<div id="posts-list">        	
-    <h2 class="page-heading"><span>BLOGG</span></h2>	
+<div id="posts-list">
+    <h2 class="page-heading">
+        <span>BLOGG</span></h2>
     @Html.DisplayFor(p => p.Posts)
 </div>
-
