--- a/Mission.WebUI/Content/css/style.css
+++ b/Mission.WebUI/Content/css/style.css
@@ -7,10 +7,10 @@
 
 /* GENERAL ------------------------------------------------------------*/
 
-#presskit-fb,
-#presskit-ap,
-#presskit-pk,
-#presskit-tw
+.presskit-fb,
+.presskit-ap,
+.presskit-pk,
+.presskit-tw
 {
     width: 31%;
     height: 89%;
