--- a/Mission.WebUI/Views/Shared/DisplayTemplates/LogOn.cshtml
+++ b/Mission.WebUI/Views/Shared/DisplayTemplates/LogOn.cshtml
@@ -1,24 +1,12 @@
 ﻿@model Mission.WebUI.ViewModels.LogOnModel
-
-@{
-    ViewBag.Title = "Log On";
-}
-
-<h2>Log On</h2>
-<p>
-    Please enter your username and password. @Html.ActionLink("Register", "Register") if you don't have an account.
-</p>
-
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
 @Html.ValidationSummary(true, "Login was unsuccessful. Please correct the errors and try again.")
-
-@using (Html.BeginForm()) {
-    <div>
+@using (Html.BeginForm("_LogOn", "Account"))
+{
+    <div id="contact-sidebar" class="block">
         <fieldset>
             <legend>Account Information</legend>
-
             <div class="editor-label">
                 @Html.LabelFor(m => m.UserName)
             </div>
@@ -26,7 +14,6 @@
                 @Html.TextBoxFor(m => m.UserName)
                 @Html.ValidationMessageFor(m => m.UserName)
             </div>
-
             <div class="editor-label">
                 @Html.LabelFor(m => m.Password)
             </div>
@@ -34,12 +21,10 @@
                 @Html.PasswordFor(m => m.Password)
                 @Html.ValidationMessageFor(m => m.Password)
             </div>
-
             <div class="editor-label">
                 @Html.CheckBoxFor(m => m.RememberMe)
                 @Html.LabelFor(m => m.RememberMe)
             </div>
-
             <p>
                 <input type="submit" value="Log On" />
             </p>
