--- a/Mission.WebUI/Views/Shared/_Layout.cshtml
+++ b/Mission.WebUI/Views/Shared/_Layout.cshtml
@@ -47,6 +47,26 @@
     <script src="@Url.Content("~/Content/js/modernizr.js")"></script>
     <!-- SKIN -->
     <link rel="stylesheet" media="all" href="@Url.Content("~/Content/css/skin.css")"/>
+
+    <!--Google Analyticsstuff-->
+    <script type="text/javascript">
+
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-35864443-1']);
+        _gaq.push(['_setDomainName', 'none']);
+        _gaq.push(['_setAllowLinker', true]);
+        _gaq.push(['_trackPageview']);
+        pageTracker._setDomainName("none");
+        pageTracker._setAllowLinker("true");
+
+        (function () {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+
+</script> 
+
 </head>
 <body>
     <header class="clearfix">
