--- a/Mission.WebUI/Views/Shared/_Layout.cshtml
+++ b/Mission.WebUI/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
     <script src="@Url.Content("~/Content/js/tabs.js")"></script>
     <script src="@Url.Content("~/Content/js/comments.js")"></script>
     <!-- Tweet -->
+    <link href='http://fonts.googleapis.com/css?family=Convergence' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="@Url.Content("~/Content/css/jquery.tweet.css")" media="all"  />
     <script src="@Url.Content("~/Content/js/tweet/jquery.tweet.js")" ></script>
     <!-- ENDS Tweet -->
