--- a/Mission.WebUI/Views/Event/Index.cshtml
+++ b/Mission.WebUI/Views/Event/Index.cshtml
@@ -21,6 +21,7 @@
 					<div class="user"><a href="#">@Html.ActionLink("Ta bort", "Delete", "Event", new { id = events.ID }, null)</a></div>
                     <div class=""><a>@Html.ActionLink("Skapa eventfråga", "CreateEventQuestion", "Event", new { id = events.ID}, null)</a></div>
                     <div class=""><a>@Html.ActionLink("CreateAnswer", "CreateAnswer", "Event", new { id = events.ID }, null)</a></div>
+                     <div class=""><a>@Html.ActionLink("statistik", "EventStatistics", "Event", new { id = events.ID }, null)</a></div>
                 }
             </div>
 		</article>
