--- a/Mission.WebUI/Views/Event/EventStatistics.cshtml
+++ b/Mission.WebUI/Views/Event/EventStatistics.cshtml
@@ -1,40 +1,24 @@
 ﻿@model Guid
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script type="text/javascript">
+    google.load("visualization", "1", { packages: ["corechart"] });
+    $.ajax({
+        'url': '/Event/StatisticsDetails/' + '@Model.ToString()',
+        'dataType': 'json',
+        'success': function drawChart(x) {
 
-   $.get({"Event/StatisticsDetails/" + @Model.ToString(),
-            function(data) {
-                google.load("visualization", "1", {packages:["corechart"]});
-                google.setOnLoadCallback(drawChart);
-                function drawChart() 
-                {
-                    var data = google.visualization.arrayToDataTable([
-                      ['Year', 'Sales', 'Expenses'],
-                      ['2004',  1000,      400],
-                      ['2005',  1170,      460],
-                      ['2006',  660,       1120],
-                      ['2007',  1030,      540]
-                     ]);
-
-                    var options = {
-                        title: 'Company Performance',
-                        hAxis: {title: 'Year', titleTextStyle: {color: 'red'}}
-                    };
-
-                    var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
-                    chart.draw(data, options);
-                }
-    
-            }});
-
-
-            $.getJSON("Event/StatisticsDetails/"+@Model, function(json) {
-                 alert("JSON Data: " + json.users[3].name);
-             });
-
-
-
+            var Categories = [['Age', 'Male score', 'Female score']];
+            var AgeScore;
+            for (var i in x) {
+                AgeScore = [x[i]["AgeSpan"], x[i]["mScore"], x[i]["fScore"]];
+                Categories.push(AgeScore);
+            }
+            console.log(Categories);
+            console.log(google);
+            var data = google.visualization.arrayToDataTable(Categories);          
+            var options = { title: 'Company Performance', hAxis: { title: 'Year', titleTextStyle: { color: 'red'}} };
+            var chart = new google.visualization.ColumnChart(document.getElementById('chart_div')); chart.draw(data, options);
+        }
+    });
 </script>
-<div class="result"></div>
-<div id="chart_div" style="width: 900px; height: 500px;">
-</div>
+<div id="chart_div" style="width: 900px; height: 500px;"></div>
