--- a/Mission.WebUI/Views/Shared/_Layout.cshtml
+++ b/Mission.WebUI/Views/Shared/_Layout.cshtml
@@ -122,13 +122,12 @@
                     <li>@Html.ActionLink("Nyheter", "index", "Post")</li>
                     <li>@Html.ActionLink("Blogg", "Blog", "Post")</li>
                     <li>@Html.ActionLink("Event", "index", "Event")</li>
-                    <li>@Html.ActionLink("Statistik", "index", "Statistics")</li>
                     <li>@Html.ActionLink("Kontakt", "index", "Contact")</li>
                     @if (Mission.WebUI.Infrastructure.AuthorizeHelper.IsAdmin(this.Context))
                     {
                         <li>@Html.ActionLink("Skapa ny post", "CreatePost", "Post")</li>
-            
                         <li>@Html.ActionLink("Skapa nytt event", "CreateEvent", "Event")</li>
+                        <li>@Html.ActionLink("Översikt", "Overview", "Event")</li>
                     }
                 </ul>
             </nav>
