--- a/Mission.WebUI/Content/css/style.css
+++ b/Mission.WebUI/Content/css/style.css
@@ -1101,4 +1101,29 @@ footer .wrapper,
 	float: right;
 }
 
+.statisticsTable table
+{   
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 2px 2px 3px 2px #aaa;
+    margin-top: 10px;
+    width: 100%;
+}
+.statisticsTable td 
+{
+    padding: 10px;
+}
 
+.statisticsTable td:nth-child(even) a {padding-left: 2px; border-left: 1px solid black;}
+th  
+{
+    font-weight: bold; 
+    font-size: 15px; 
+    letter-spacing: 2px;
+}
+
+tr:nth-child(even) {background: #CCC}
+tr:nth-child(odd) {background: #FFF}
+td:nth-child(even){width: 40%;}
+th:nth-child(odd){text-align:left; padding-left: 10px;}
+td a:first-child{border-left: 0px solid black !important;}
