--- a/Mission.WebUI/Views/Event/CreateEventQuestion.cshtml
+++ b/Mission.WebUI/Views/Event/CreateEventQuestion.cshtml
@@ -27,6 +27,6 @@
         @Html.HiddenFor(p => EventID)
     </p>
     <div>
-        <input type="submit" value="Skapa post" />
+        <input type="submit" value="Skapa eventfråga" />
     </div>
 }
