--- a/Mission.WebUI/Views/Event/EventStatistics.cshtml
+++ b/Mission.WebUI/Views/Event/EventStatistics.cshtml
@@ -2,23 +2,37 @@
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script type="text/javascript">
     google.load("visualization", "1", { packages: ["corechart"] });
-    $.ajax({
-        'url': '/Event/StatisticsDetails/' + '@Model.ToString()',
-        'dataType': 'json',
-        'success': function drawChart(x) {
+    $(function () {
 
-            var Categories = [['Age', 'Male score', 'Female score']];
-            var AgeScore;
-            for (var i in x) {
-                AgeScore = [x[i]["AgeSpan"], x[i]["mScore"], x[i]["fScore"]];
-                Categories.push(AgeScore);
+        $.ajax({
+            'url': '/Event/StatisticsDetails/' + '@Model.ToString()',
+            'dataType': 'json',
+            'success': function drawChart(x) {
+                var Categories = [['Age', 'Male score', 'Female score']];
+                var AgeScore;
+                for (var i in x[0]) {
+                    AgeScore = [x[0][i]["AgeSpan"], x[0][i]["mScore"], x[0][i]["fScore"]];
+                    Categories.push(AgeScore);
+                }
+                var data = google.visualization.arrayToDataTable(Categories);
+                var chart = new google.visualization.ColumnChart(document.getElementById('chart_div')); chart.draw(data, options);
+                for (n = 1; n < x.length; n++) {
+                    Categories = [['Age', 'Male score', 'Female score']];
+                    for (var a in x[n]) {
+                        AgeScore = [x[n][a]["AgeSpan"], x[n][a]["mScore"], x[n][a]["fScore"]];
+                        Categories.push(AgeScore);
+                    }
+                    $('.charts').append('<p>'+x[n][a]["Question"]+'</p><div class ="chartDiv" id="chart_div' + n + '" style="width: 600px; height: 250px;"></div>');
+                    data = google.visualization.arrayToDataTable(Categories);
+                    var charts = new google.visualization.ColumnChart(document.getElementById('chart_div' + n)); charts.draw(data, options);
+                }
+                var options = { title: 'Betyg för event', hAxis: { title: 'Åldersspann', titleTextStyle: { color: 'red'}} };
             }
-            console.log(Categories);
-            console.log(google);
-            var data = google.visualization.arrayToDataTable(Categories);          
-            var options = { title: 'Betyg för event', hAxis: { title: 'Åldersspann', titleTextStyle: { color: 'red'}} };
-            var chart = new google.visualization.ColumnChart(document.getElementById('chart_div')); chart.draw(data, options);
-        }
+        });
     });
 </script>
-<div id="chart_div" style="width: 900px; height: 500px;"></div>
+<div class="charts">
+    <p>Statistik för hela eventet</p>
+    <div class="chartDiv" id="chart_div" style="width: 600px; height: 250px;"></div>
+</div>
+
