--- a/Mission.WebUI/Views/Shared/_News.cshtml
+++ b/Mission.WebUI/Views/Shared/_News.cshtml
@@ -1,4 +1,5 @@
-﻿<div id="posts-list">
+﻿
+<div id="posts-list">
     @foreach (var news in Model)
     { 
     
@@ -10,7 +11,6 @@
             <h2 class="post-heading">
                 <a href="#">@news.Title</a></h2>
             <div class="excerpt">@MvcHtmlString.Create(@news.Body)</div>
-            @*<a href="#" class="read-more">continue &#8594;</a>*@
             <div class="meta">
                 <div class="categories">@news.Date.ToString("HH:mm:ss")</div>
                 @if (Mission.WebUI.Infrastructure.AuthorizeHelper.IsAdmin(this.Context))
