--- a/Mission.WebUI/Views/Post/Index.cshtml
+++ b/Mission.WebUI/Views/Post/Index.cshtml
@@ -6,7 +6,33 @@
 
 
 
-@Html.Partial("_News")
+
+<div id="posts-list">
+    @foreach (var news in Model)
+    { 
+    
+        <article class="format-standard">
+            <div class="entry-date">
+                <div class="number">@news.Date.Day</div>
+                <div class="year">@news.Date.ToString("MMM"),@news.Date.Year</div>
+            </div>
+            <h2 class="post-heading">
+                <a href="#">@news.Title</a></h2>
+            <div class="excerpt">@MvcHtmlString.Create(@news.Body)</div>
+            <div class="meta">
+                <div class="categories">@news.Date.ToString("HH:mm:ss")</div>
+                @if (Mission.WebUI.Infrastructure.AuthorizeHelper.IsAdmin(this.Context))
+                {
+                    <div class="comments">
+                        <a href="#">@Html.ActionLink("Ändra", "Edit", "Post", new { id = news.ID }, null)</a></div>
+                    <div class="user">
+                        <a href="#">@Html.ActionLink("Ta bort", "Delete", "Post", new { id = news.ID }, null)</a></div>
+                }
+            </div>
+        </article>
+    }
+</div>
+
 
 
 
