--- a/Mission.WebUI/Views/Shared/_News.cshtml
+++ b/Mission.WebUI/Views/Shared/_News.cshtml
@@ -1,16 +1,20 @@
-﻿
-<div id="posts-list">
+﻿<div id="posts-list">
+    @{var n = 1;}
     @foreach (var news in Model)
-    { 
-    
+    {        
+        var link = "";
+            if(news.Type == 0){
+                link = "Index";            
+            }else{ link = "blog";};        
         <article class="format-standard">
             <div class="entry-date">
                 <div class="number">@news.Date.Day</div>
                 <div class="year">@news.Date.ToString("MMM"),@news.Date.Year</div>
             </div>
             <h2 class="post-heading">
-                <a href="#">@news.Title</a></h2>
-            <div class="excerpt">@MvcHtmlString.Create(@news.Body)</div>
+                   <a href="Post/@link">@news.Title</a>
+                </h2>
+            <div class="excerpt" id="news-@n">@MvcHtmlString.Create(@news.Body)</div>
             <div class="meta">
                 <div class="categories">@news.Date.ToString("HH:mm:ss")</div>
                 @if (Mission.WebUI.Infrastructure.AuthorizeHelper.IsAdmin(this.Context))
@@ -22,5 +26,6 @@
                 }
             </div>
         </article>
+                n =n+1;
     }
 </div>
